--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "request": "^2.88.2",
+    "socket.io": "^4.8.1",
     "task-manager": "file:.."
   },
   "devDependencies": {
