--- a/.env
+++ b/.env
@@ -1,3 +1,29 @@
+# API Configuration
 REACT_APP_API_URL=http://localhost:5001/api
 REACT_APP_VET_CODE=IFN636-VET-ONLY
 REACT_APP_ADMIN_CODE=ADMIN-2025
+
+
+# WebSocket URL (if different from API)
+REACT_APP_WS_URL=ws://localhost:5001
+
+# App Configuration
+REACT_APP_NAME=Vet Clinic Management System
+REACT_APP_VERSION=1.0.0
+
+# Environment
+REACT_APP_ENV=development
+
+# Features Toggle (optional)
+REACT_APP_ENABLE_WEBSOCKET=true
+REACT_APP_ENABLE_NOTIFICATIONS=true
+
+# Google Maps API (if needed)
+REACT_APP_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Upload limits
+REACT_APP_MAX_FILE_SIZE=5242880
+REACT_APP_ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,application/pdf
+
+# Debug Mode
+REACT_APP_DEBUG=true
