--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
     "request": "^2.88.2",
@@ -25,9 +25,13 @@
     "cross-env": "^10.0.0",
     "esm": "^3.2.25",
     "mocha": "^11.7.1",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.22",
     "sinon": "^19.0.5"
   },
   "author": "Task Manager Team",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": []
 }
