--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "devDependencies": {
     "@types/jspdf": "^1.3.3",
-    "chai": "^5.2.1",
+    "chai": "^5.3.3",
+    "chai-http": "^5.1.2",
     "concurrently": "^9.2.0",
-    "mocha": "^11.7.1",
-    "sinon": "^21.0.0"
+    "cross-env": "^10.1.0",
+    "mocha": "^11.7.4",
+    "mochawesome": "^7.1.4",
+    "mongodb-memory-server": "^10.2.1",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4"
   },
   "proxy": "http://localhost:5001",
   "author": "Task Manager Team",
