--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,49 @@
 {
   "name": "task-manager-backend",
   "version": "1.0.0",
-  "description": "Backend for Task Manager App",
+  "description": "Backend for Pet-Clinic / Task Manager (with full test setup)",
   "main": "server.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha ./test/**/*.js",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+
+    "//--- Test: master switches ---": "--------------------------------------",
+    "test": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 15000",
+    "test:watch": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/**/*.test.js\" -w --reporter spec --timeout 15000",
+    "test:one": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 15000",
+
+    "//--- Test: focused groups ---": "--------------------------------------",
+    "test:unit": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/unit/**/*.test.js\" --reporter spec --timeout 15000",
+    "test:api": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/api/**/*.test.js\" --reporter spec --timeout 15000",
+    "test:mbt": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/mbt/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 20000",
+
+    "//--- Coverage ---": "--------------------------------------",
+    "coverage": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me nyc --reporter=lcov --reporter=text mocha \"test/**/*.test.js\" --timeout 15000",
+
+    "//--- Utilities ---": "--------------------------------------",
+    "clean:reports": "rimraf mochawesome-report .nyc_output coverage"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
-    "request": "^2.88.2",
-    "socket.io": "^4.8.1",
-    "task-manager": "file:.."
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "chai": "^5.2.1",
-    "cross-env": "^10.0.0",
-    "esm": "^3.2.25",
-    "mocha": "^11.7.1",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.10",
+    "chai": "^5.3.0",
+    "cross-env": "^10.1.0",
+    "mocha": "^11.7.4",
+    "mochawesome": "^7.1.4",
     "nodemon": "^2.0.15",
-    "sinon": "^19.0.5"
+    "nyc": "^17.1.0",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.5",
+    "supertest": "^7.1.4"
   },
   "author": "Task Manager Team",
   "license": "ISC"
