--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,35 +2,63 @@ name: CI
 
 on:
   push:
+    branches:
+      - main
+      - '**'               
   pull_request:
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:         
 
 jobs:
   backend-tests:
+    name: Backend Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1) checkout code
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # 2) setup node
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+
+      # 3) install backend deps
+      - name: Install Backend Dependencies
+        working-directory: ./backend
+        run: npm ci
+
+      # 4) run backend tests
+      - name: Run Backend Tests
+        working-directory: ./backend
+        env:
+          NODE_ENV: test
+        run: NODE_ENV=test npm test
+
+
+  frontend-build:
+    name: Frontend Build
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20                    
-          cache: npm                          
-          cache-dependency-path: backend/package-lock.json   
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
 
-      - name: Install (clean)
-        working-directory: backend            
+      - name: Install Frontend Dependencies
+        working-directory: ./frontend
         run: npm ci
 
-      - name: Test
-        working-directory: backend           
-        run: npm test
-
-      - name: Upload mochawesome report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: mochawesome-report
-          path: backend/mochawesome-report
-          if-no-files-found: ignore
+      - name: Build Frontend
+        working-directory: ./frontend
+        run: npm run build
