--- a/backend/package.json
+++ b/backend/package.json
@@ -1,38 +1,46 @@
 {
   "name": "task-manager-backend",
   "version": "1.0.0",
-  "private": true,
-  "description": "Backend for Task Manager",
+  "description": "Backend for Pet-Clinic / Task Manager (with full test setup)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test:api": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 15000",
-    "test:unit": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/unit/**/*.test.js\" --reporter spec --timeout 10000",
-    "test:task:create": "npm run test:unit -- --grep \"createTask\"",
-    "test:task:list": "npm run test:unit -- --grep \"listTasks|getTasks\"",
-    "test:task:update": "npm run test:unit -- --grep \"updateTask\"",
-    "test:task:delete": "npm run test:unit -- --grep \"deleteTask\"",
-    "test:task:create:fail": "cross-env UNIT_FAIL=1 npm run test:task:create",
-    "test:task:list:fail": "cross-env UNIT_FAIL=1 npm run test:task:list",
-    "test:task:update:fail": "cross-env UNIT_FAIL=1 npm run test:task:update",
-    "test:task:delete:fail": "cross-env UNIT_FAIL=1 npm run test:task:delete",
-    "test": "npm run test:unit"
+    "dev": "nodemon server.js",
+    "//--- Test: master switches ---": "--------------------------------------",
+    "test": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 15000",
+    "test:watch": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/**/*.test.js\" -w --reporter spec --timeout 15000",
+    "test:one": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 15000",
+    "//--- Test: focused groups ---": "--------------------------------------",
+    "test:unit": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/unit/**/*.test.js\" --reporter spec --timeout 15000",
+    "test:api": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/api/**/*.test.js\" --reporter spec --timeout 15000",
+    "test:mbt": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me mocha \"test/mbt/**/*.test.js\" --reporter mochawesome --reporter-options reportDir=mochawesome-report,reportFilename=index,overwrite=true,html=true,json=true --timeout 20000",
+    "//--- Coverage ---": "--------------------------------------",
+    "coverage": "cross-env NODE_ENV=test JWT_SECRET=TEST_ONLY_SECRET_change_me nyc --reporter=lcov --reporter=text mocha \"test/**/*.test.js\" --timeout 15000",
+    "//--- Utilities ---": "--------------------------------------",
+    "clean:reports": "rimraf mochawesome-report .nyc_output coverage"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.0"
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.14",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "chai": "^5.2.0",
-    "cross-env": "^7.0.3",
-    "mocha": "^10.7.3",
-    "mochawesome": "^7.1.3",
-    "sinon": "^17.0.1",
-    "supertest": "^7.0.0"
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.10",
+    "chai": "^5.3.0",
+    "cross-env": "^10.1.0",
+    "mocha": "^11.7.4",
+    "mochawesome": "^7.1.4",
+    "nodemon": "^2.0.15",
+    "nyc": "^17.1.0",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.5",
+    "supertest": "^7.1.4"
   },
-  "engines": {
-    "node": ">=18"
-  }
+  "author": "Task Manager Team",
+  "license": "ISC"
 }
