--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm start --prefix frontend\""
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jspdf": "^1.3.3",
     "chai": "^5.2.1",
     "concurrently": "^9.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "mocha": "^11.7.1",
     "sinon": "^21.0.0"
   },
@@ -18,6 +22,7 @@
   "author": "Task Manager Team",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
